--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
     "scripts": {
         "debug": "node index.js --config-yaml=configOfFeedFetcher.yml",
         "feed-fetcher:run": "npm run feed-fetcher run"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/Landmaster135/FeedFetcher.git"
     }
 }
