--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
         "node": ">=16.13.1",
         "npm": ">=8.3.0"
     },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/Landmaster135/FeedFetcher.git"
+    },
     "homepage": "https://github.com/Landmaster135/FeedFetcher"
 }
