--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
         "js-yaml": "^4.1.0",
         "node-fetch": "^3.1.0"
     },
+    "devDependencies": {
+        "eslint": "^7.22.0",
+        "jest": "^24.9.0"
+    },
     "engines": {
         "node": ">=16.13.1",
         "npm": ">=8.3.0"
