--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -42,4 +42,5 @@ ADD README.md .
 # use git
 RUN apt install git-all -y
 RUN npm install https://github.com/Landmaster135/FeedFetcher
+RUN chmod 777 node_modules/feed-fetcher/bin/run
 # CMD npm run start
