--- a/configOfFeedFetcher.yml
+++ b/configOfFeedFetcher.yml
@@ -1,4 +1,4 @@
-displayLimit: 10
+displayLimit: 
 feedUrlArray:
   - https://zenn.dev/kinkinbeer135ml/feed
   - https://qiita.com/Landmaster135/feed.atom
