--- a/package.json
+++ b/package.json
@@ -1,32 +1,33 @@
 {
-    "name": "feed-fetcher",
-    "version": "1.0.0",
-    "description": "update file for only feed",
-    "main": "./index.js",
-    "scripts": {
-        "debug": "node index.js --config-yaml=configOfFeedFetcher.yml",
-        "feed-fetcher:run": "npm run feed-fetcher run"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "MIT",
-    "type": "module",
-    "dependencies": {
-        "commander": "^8.3.0",
-        "js-yaml": "^4.1.0",
-        "node-fetch": "^3.1.0"
-    },
-    "devDependencies": {
-        "eslint": "^7.22.0",
-        "jest": "^24.9.0"
-    },
-    "engines": {
-        "node": ">=16.13.1",
-        "npm": ">=8.1.2"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/Landmaster135/feed-fetcher.git"
-    },
-    "homepage": "https://github.com/Landmaster135/feed-fetcher"
+  "name": "feed-fetcher",
+  "version": "1.0.0",
+  "description": "update file for only feed",
+  "main": "./index.js",
+  "scripts": {
+    "feed": "node feed-fetch.js --config-yaml=configOfFeedFetcher.yml",
+    "image": "node image-scale.js --config-yaml=configOfImageScaler.yml",
+    "feed-fetcher:run": "npm run feed-fetcher run"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
+  "type": "module",
+  "dependencies": {
+    "commander": "^8.3.0",
+    "js-yaml": "^4.1.0",
+    "node-fetch": "^3.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.22.0",
+    "jest": "^24.9.0"
+  },
+  "engines": {
+    "node": ">=16.13.1",
+    "npm": ">=8.1.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Landmaster135/feed-fetcher.git"
+  },
+  "homepage": "https://github.com/Landmaster135/feed-fetcher"
 }
