--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "feed-fetcher",
   "version": "1.0.0",
   "description": "update file for only feed",
-  "main": "./index.js",
+  "main": "./feed-fetch.js",
   "scripts": {
     "feed": "node feed-fetch.js --config-yaml=configOfFeedFetcher.yml",
     "image": "node image-scale.js --config-yaml=configOfImageScaler.yml",
-    "feed-fetcher:run": "npm run feed-fetcher run"
+    "feed-fetcher:run": "npm run feed-fetcher run",
+    "test": "NODE_ENV=test jest",
+    "test:w": "jest --watch",
+    "test:c": "jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -18,8 +21,13 @@
     "node-fetch": "^3.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.12",
+    "@babel/preset-env": "^7.16.11",
+    "babel": "^6.23.0",
+    "babel-jest": "^27.4.6",
     "eslint": "^7.22.0",
-    "jest": "^24.9.0"
+    "jest": "^27.4.6",
+    "lodash": "4.17.21"
   },
   "engines": {
     "node": ">=16.13.1",
